--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -73,20 +73,20 @@ transaction. Values of the field if provided to NPCI has to be matched
 against it. ????
 
 
-| parameter    | type                | description                    | example                |
-|--------------|---------------------|--------------------------------|------------------------|
-| `id`         | `string`            | The Agent ID on BBPS           | "AS01AI06512391457204" |
-| `channel`    | `PaymentChannel`    | Payment Channel used by Agent. | "INT"                  |
-| `ip`         | `string,ipv4`       | Agent server IP address        | "124.170.23.24"        |
-| `mac`        | `string,mac`        | Server MAC address             | "48-4D-7E-CB-DB-6F"    |
-| `mobile`     | `string`            | Agent Mobile number            | "9876543210"           |
-| `geocode`    | `string`            | Agent Geocode                  | "19.0139,72.8254"      |
-| `postalCode` | `string`            | Agent Pincode                  | "600001"               |
-| `terminalId` | `string`            | Agent terminal ID              | "6000011234"           |
-| `imei`       | `string`            | Agent IMEI                     | "123456789012345"      |
-| `ifsc`       | `string`            | Agent IFSC                     | "ICIC0000152"          |
-| `os`         | `iOS / Android`     | Initiating device OS           | "Android"              |
-| `app`        | `string`            | Initiating app name            | "SmartPay"             |
+| parameter    | type             | description                    | example                |
+|--------------|------------------|--------------------------------|------------------------|
+| `id`         | `string`         | The Agent ID on BBPS           | "AS01AI06512391457204" |
+| `channel`    | `PaymentChannel` | Payment Channel used by Agent. | "INT"                  |
+| `ip`         | `string,ipv4`    | Agent server IP address        | "124.170.23.24"        |
+| `mac`        | `string,mac`     | Server MAC address             | "48-4D-7E-CB-DB-6F"    |
+| `mobile`     | `string`         | Agent Mobile number            | "9876543210"           |
+| `geocode`    | `string`         | Agent Geocode                  | "19.0139,72.8254"      |
+| `postalCode` | `string`         | Agent Pincode                  | "600001"               |
+| `terminalId` | `string`         | Agent terminal ID              | "6000011234"           |
+| `imei`       | `string`         | Agent IMEI                     | "123456789012345"      |
+| `ifsc`       | `string`         | Agent IFSC                     | "ICIC0000152"          |
+| `os`         | `iOS \| Android` | Initiating device OS           | "Android"              |
+| `app`        | `string`         | Initiating app name            | "SmartPay"             |
 
 
 ## Initiating Channel & Required Agent parameters
@@ -128,7 +128,7 @@ against it. ????
 |-----------|--------------------------------|----------------------------------------------------------------------------------------------------|-------------------------------------------------------------------|
 | code      | `string`                       | Error codes includes Application, Banking and BBPS error codes                                     | `"invalid-amount"`                                                |
 | message   | `string`                       | Error code description                                                                             | `"Amount is invalid for this payment. Exactness does not match."` |
-| type      | `FUND_TRANSFER | BBPS | APP`   | Error Type. BBPS errors are due to BBPS, and code and message field contain the actual BBPS error. | `"APP"`                                                           |
+| type      | `FUND_TRANSFER \| BBPS \| APP` | Error Type. BBPS errors are due to BBPS, and code and message field contain the actual BBPS error. | `"APP"`                                                           |
 
 
 ## Payment Details
@@ -142,18 +142,18 @@ against it. ????
 
 
 ## Bill Status
-| type         | description                                        |
-|--------------|----------------------------------------------------|
+| type         | description                                       |
+|--------------|---------------------------------------------------|
 | `Processing` | Fetching a bill (or) Paying a bill is in progress |
 | `Success`    | Successfully fetched a bill (or) paid a bill      |
 | `Failure`    | Unable to fetch a bill or pay a bill              |
 
 ## Transaction Status
-| type         | description                                        |
-|--------------|----------------------------------------------------|
-| `Processing` | Transaction is in progress                         |
-| `Success`    | Transaction is successful                          |
-| `Failure`    | Transaction has failed                             |
+| type         | description                                       |
+|--------------|---------------------------------------------------|
+| `Processing` | Transaction is in progress                        |
+| `Success`    | Transaction is successful                         |
+| `Failure`    | Transaction has failed                            |
 | `Refunded`   | Transaciton refunded. This happens post `Failure` |
 
 
@@ -202,7 +202,7 @@ against it. ????
 | customer  | [Customer](#customer) | Customer Object                                                     | ???     |
 | biller    | [Biller](#biller)     | Biller Object                                                       | ???     |
 | Agent     | [Agent](#agent)       | Agent Object                                                        | ???     |
-| autoFetch | `bool`                | On `true`, enables auto-fetch for the bill on successful bill fetch | `true`        |
+| autoFetch | `bool`                | On `true`, enables auto-fetch for the bill on successful bill fetch | `true`  |
 
 ## Exactness
 
@@ -220,7 +220,7 @@ Amount acceptance by the biller.
 |---------------|----------------------------------------|----------------------------------------------|----------------------------------------------------------------------------------------|
 | status        | [Status](#bill-status)                 | Status of the refund process                 | `Success`                                                                              |
 | transactionId | `string`                               | Setu Transaction ID                          | `REFAS01303112462917ELVJ`                                                              |
-| error         | `{code:string,message:string} | null`  | Error code and message during refund process | `{"code":"bank-connectivity-error", "message:"The account debit could not be happen."` |
+| error         | `{code:string,message:string} \| null` | Error code and message during refund process | `{"code":"bank-connectivity-error", "message:"The account debit could not be happen."` |
 
 
 
@@ -230,23 +230,23 @@ Amount acceptance by the biller.
 |-----------------------|-------------------------------|---------------------------------------------------------|--------------|
 | paymentMode           | [Payment Mode](#payment-mode) | payment mode                                            | `Debit Card` |
 | supportsPendingStatus | `bool`                        | Whether payment mode for biller supports pending status | `false`      |
-| minLimit              | `integer | null`              | Minimum acceptable amount in paise                      | `1000`       |
-| maxLimit              | `integer | null`              | Maximum acceptable amount in paise                      | `1000`       |
+| minLimit              | `integer \| null`             | Minimum acceptable amount in paise                      | `1000`       |
+| maxLimit              | `integer \| null`             | Maximum acceptable amount in paise                      | `1000`       |
 
 
 ## Fetch Response - `/bills/fetch/response`
 
-| parameter      | type                              | description                                             | example                                                                                    |
-|----------------|-----------------------------------|---------------------------------------------------------|--------------------------------------------------------------------------------------------|
-| refId          | `string`                          | BBPS reference ID for the fetch request.                | `CFCC0J9UR3CM6CP6I7BGZG54DG630311246`                                                      |
-| status         | [Bill Status](#bill-status)       | Bill fetch request status.                              | `Success`                                                                                  |
-| failureReason  | [Failure Reason](#failure-reason) | Failure reason on status `Failure`                      | `{ "code": "BOU002", "message": "TMM001", "type": "BBPS" }`                                |
-| bill           | [Bill Data](#bill-data)           | Bill                                                    | ???                                                                                        |
-| additionalInfo | `{"name":"value"}[]`              | Additional information of the bill sent by the biller   | ???                                                                                        |
-| billerRefId    | `string`                          | Biller reference ID used by the biller for the request. | `7f16a032e514`                                                                             |
-| exactness      | [Exactness](#exactness)           | Biller Exactness                                        | `Exact`                                                                                    |
+| parameter      | type                                | description                                             | example                                                                                    |
+|----------------|-------------------------------------|---------------------------------------------------------|--------------------------------------------------------------------------------------------|
+| refId          | `string`                            | BBPS reference ID for the fetch request.                | `CFCC0J9UR3CM6CP6I7BGZG54DG630311246`                                                      |
+| status         | [Bill Status](#bill-status)         | Bill fetch request status.                              | `Success`                                                                                  |
+| failureReason  | [Failure Reason](#failure-reason)   | Failure reason on status `Failure`                      | `{ "code": "BOU002", "message": "TMM001", "type": "BBPS" }`                                |
+| bill           | [Bill Data](#bill-data)             | Bill                                                    | ???                                                                                        |
+| additionalInfo | `{"name":"value"}[]`                | Additional information of the bill sent by the biller   | ???                                                                                        |
+| billerRefId    | `string`                            | Biller reference ID used by the biller for the request. | `7f16a032e514`                                                                             |
+| exactness      | [Exactness](#exactness)             | Biller Exactness                                        | `Exact`                                                                                    |
 | paymentLimits  | [Payment Limit](#payment-limit)`[]` | Payment limits???                                       | `{"maxLimit":1000,"minLimit":10,"paymentMode":"Debit Card","supportsPendingStatus":false}` |
-| autoFetchHash  | `string`                          | Auto fetch identifier for the bill.                     | `d28ca210e0267a13fa0db18ee96a349dc4578f032e5902192af762763224204a`                         |
+| autoFetchHash  | `string`                            | Auto fetch identifier for the bill.                     | `d28ca210e0267a13fa0db18ee96a349dc4578f032e5902192af762763224204a`                         |
 
 
 ## Payment Request - `/bills/payment/request`
@@ -342,9 +342,9 @@ Amount acceptance by the biller.
 
 | parameter  | type                      | description               | example              |
 |------------|---------------------------|---------------------------|----------------------|
-| dataType   | `NUMERIC | ALPHANUMERIC`  | Value format              | "123456" (`NUMERIC`) |
-| maxLength  | `integer | null`          | Value's max length        | `6`                  |
-| minLength  | `integer | null`          | Value's min length        | `2`                  |
+| dataType   | `NUMERIC \| ALPHANUMERIC` | Value format              | "123456" (`NUMERIC`) |
+| maxLength  | `integer \| null`         | Value's max length        | `6`                  |
+| minLength  | `integer \| null`         | Value's min length        | `2`                  |
 | optional   | `bool`                    | Is the parameter optional | `false`              |
 | paramName  | `string`                  | Parameter name            | `Policy Number`      |
 | regex      | `string` (Regex)          | Value Regex               | `"^[5-9][0-9]{9}$"`  |
@@ -383,7 +383,7 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | description     | `string`             | Plan description                         | ???          |
 | effectiveFrom   | `date`               | Plan effective from                      | `2021-09-24` |
 | effectiveTo     | `date`               | Plan effective to                        | `2021-09-24` |
-| status          | `ACTIVE | DEACTIVE`  | Plan status                              | `ACTIVE`     |
+| status          | `ACTIVE \| DEACTIVE` | Plan status                              | `ACTIVE`     |
 
 
 ## Biller MDM
